<resources>
    <string name="app_name">CaringAide</string>
    <string-array name="h12_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="hour_array">
        
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        
        
    </string-array>
    <string-array name="minute_array">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string-array name="time_dur_hour_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string-array name="time_dur_min_array">
        <item>00</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
    </string-array>
    <string-array name="country_code_array">
        <item>+1</item>
        <item>+91</item>
    </string-array>
    <string-array name="meridian_array">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="tipable_percent">
        <item>25</item>
        <item>20</item>
        <item>15</item>
        <item>10</item>
        <item>5</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ANY_PERMISSION">Grant permission to enable this feature</string>
    <string name="LOCATION_PERMISSION">Location permission is required for accessing service.</string>
    <string name="LOCATION_PERM_DIALOG_TITLE">Location Permission Required</string>
    <string name="LOCATION_PERM_DIALOG_MSG">Unable to proceed to app without setting the location permissions right.</string>
    <string name="CALL_PERMISSION">Please grant permission to make calls from this application</string>
    <string name="CONTACT_PERMISSION">You won\'t be allowed to choose contacts without this permission</string>
    <string name="PHOTO_PERMISSION">Grant permission to choose photos</string>
    <string name="STORAGE_PERMISSION">Grant permission to access storage</string>
    <string name="PERM_RATIONALE_TITLE">Allow Access</string>
    <string name="PERM_GENERAL_MSG">If this permission was not allowed earlier, please enable it from settings.\nPermissions are required for the app to work seamlessly.Thank You.</string>
    <string name="Manifest.permission.ACCESS_FINE_LOCATION">Allow Access To Location</string>
    <string name="Manifest.permission.READ_CONTACTS">Allow Access To Read Contacts</string>
    <string name="Manifest.permission.CALL_PHONE">Allow To Make Calls</string>
    <string name="Manifest.permission.CAMERA">Allow Access To Camera</string>
    <string name="Manifest.permission.WRITE_EXTERNAL_STORAGE">Allow Access To Storage</string>
    <string name="UPDATE_SUCCESSFULL">Updated Successfully</string>
    <string name="UPDATE_FAILED">Failed to update record</string>
    <string name="ADDITION_FAILED">Failed to add record</string>
    <string name="DELETE_FAILED">Failed to delete record</string>
    <string name="DELETED_SUCCESSFULLY">Deleted Successfully.</string>
    <string name="ADDED_SUCCESSFULLY">Added Successfully.</string>
    <string name="ADD_FAILED">Booking failed. Please provide the proper credentials.</string>
    <string name="gps_enable_msg">GPS is not enabled. Please enable it from settings menu?</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="no_google_location">Unable to fetch location details, location not covered.</string>
    <string name="unknown_error">Unexpected error from the server. Please try again.</string>
    <string name="ask_cancel">Do you want to cancel your booking? If yes, please provide a valid reason.</string>
    <string name="confirm_ben_edit_title">Confirm Your Client Edit</string>
    <string name="confirm_ben_edit_value">Please confirm your edits to the client details.</string>
    <string name="logout_success">Logout Successful</string>
    <string name="duplicate_username">Sorry! Username is taken. Please try another.</string>
    <string name="ask_cancel_title">Cancel Booking</string>
    <string name="rating_success_title">Rating Successful</string>
    <string name="rating_success_data">Thank you for your valuable feedback</string>
    <string name="booking_success">Your booking Added Successfully.</string>
    <string name="cancel_request_error">Cancellation Failed!</string>
    <string name="cancel_done">"Cancellation successful.</string>
    <string name="refer_succesfull_message">Congrats! Friend referral successful. Please share the reference token with your friend. They should use the code when registering with the app. Thank you!\n Referral Token: </string>
    <string name="booking_done_title">Booking successful</string>
    <string name="select_card_err">Please select any of the payment option to continue booking.</string>
    <string name="confirm_adding_ben">Confirm Client Addition</string>
    <string name="ask_register_beneficiary">Please confirm your new client.</string>
    <string name="client_added_success">Your client successfully added. Please add payment details next.</string>
    <string name="add_ben_success">Client successfully added</string>
    <string name="remove_buddy_title">Remove Buddy</string>
    <string name="ask_delete_buddy">Do you want to remove your buddy from the favorite list?</string>
    <string name="remove_buddies_success">Removed buddy from favorites list successfully.</string>
    <string name="delete_all_buddy">Clear All Buddies</string>
    <string name="no_data_add_ben">No client found.\n No clients are registered. Please register a client to continue with your booking.</string>
    <string name="ask_delete_all_buddy">Do you want to clear all your favorite buddies?</string>
    <string name="delete_all_buddy_success">Cleared all buddies successfully.</string>
    <string name="add_buddy_title">Buddy Addition</string>
    <string name="ask_add_fav_buddy">Do you want to add the selected buddy to your favorites list?</string>
    <string name="buddy_added_success">Buddy successfully added to the favorite list</string>
    <string name="edit_buddies">Client Edited</string>
    <string name="edit_buddies_failed">Failed to edit client</string>
    <string name="edit_user_failed">Failed to edit user profile</string>
    <string name="edit_buddies_success">Client successfully edited.</string>
    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_img_title">Profile Image</string>
    <string name="user_profile_img_success">Profile image updated successfully.</string>
    <string name="user_profile_edited_success">User profile successfully updated</string>
    <string name="ask_username">Please provide a valid username</string>
    <string name="ask_password">Please provide a valid password</string>
    <string name="ask_name_length">Length of name should be between&#160;</string>
    <string name="ask_uname_length">Length of user name should be between 5 and 20</string>
    <string name="info_uname">Username can contain a minimum of 5 and maximum of 30 characers.Only alphanumeric characters are allowed.Special characters allowed are - _ @ .</string>
    <string name="ask_fullname_length">Length of  full name should be between&#160;</string>
    <string name="ask_relation_length">Length of relation type should be between&#160;</string>
    <string name="ask_fname">Please enter a valid first name</string>
    <string name="ask_lname">Please enter a valid last name</string>
    <string name="ask_name">Please enter a valid name</string>
    <string name="ask_zip">Please enter a valid zipcode</string>
    <string name="match_password">Passwords does not match</string>
    <string name="enter_otp_label_text">Enter the OTP received on your mobile number.</string>
    <string name="ask_dob">Please enter a valid date of birth</string>
    <string name="ask_address">Please enter a valid address.</string>
    <string name="addr_len_err">Length should be between&#160;</string>
    <string name="ask_valid_fullname">Please enter a valid full name.</string>
    <string name="submit">Submit</string>
    <string name="info_card_for_refer">Please make sure card details are added for getting referral benefits.</string>
    <string name="tools">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="firstname_label">First Name</string>
    <string name="lastname_label">Last Name</string>
    <string name="mobile_label">Mobile</string>
    <string name="email_label">Email</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="password_content_info">Password Info</string>
    <string name="username_content_info">UserName Info</string>
    <string name="ok">OK</string>
    <string name="zipcode_label">Zipcode</string>
    <string name="register_ben">Add Client</string>
    <string name="logout">Logout</string>
    <string name="ongoing">Ongoing</string>
    <string name="paid_label">Invoice</string>
    <string name="cancel_reason">Reason for cancelling :</string>
    <string name="track_buddy">Track Buddy</string>
    <string name="i_agree">I agree to the&#160;</string>
    <string name="agree_terms_privacy">Terms and Conditions&#160;</string>
    <string name="agree_privacy_policy">Privacy Policy</string>
    <string name="agree_age">I am 18+</string>
    <string name="apply_ref_code">Do you have a referral code?</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="and_label">&#160;and&#160;</string>
    <string name="help">Help</string>
    <string name="contact_us_label">Contact Us</string>
    <string name="close">Close</string>
</resources>